OxyMP/oxymp/tests/tokens/private-tokens.stderr
error[E0603]: enum `Tok` is private
  --> tests/tokens/private-tokens.rs:12:16
   |
12 |     let _ = m::Tok::A;
   |                ^^^  - unit variant `A` is not publicly re-exported
   |                |
   |                private enum
   |
note: the enum `Tok` is defined here
  --> tests/tokens/private-tokens.rs:5:5
   |
5  |     enum Tok {
   |     ^^^^^^^^
